// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules/Toolbar Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="container"
  >
    <button
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "border": 0,
          "padding": 0,
        }
      }
    >
      <div
        className="container color-inverted size-md"
      >
        <svg
          fill="none"
          height="24px"
          stroke="currentColor"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 19l-7-7 7-7"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </svg>
      </div>
    </button>
    <div
      className="spacer vertical"
      style={
        Object {
          "height": "100%",
          "maxHeight": "auto",
          "width": 15,
        }
      }
    />
    <header
      className="headings color-inverted size-lg weight-bold"
    >
      Login
    </header>
  </div>
</div>
`;

exports[`Storyshots Molecules/Toolbar Only Icon 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="container"
  >
    <button
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "border": 0,
          "padding": 0,
        }
      }
    >
      <div
        className="container color-inverted size-md"
      >
        <svg
          fill="none"
          height="24px"
          stroke="currentColor"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 19l-7-7 7-7"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </svg>
      </div>
    </button>
    <div
      className="spacer vertical"
      style={
        Object {
          "height": "100%",
          "maxHeight": "auto",
          "width": 15,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Molecules/Toolbar Only Title 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="container"
  >
    <button
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "border": 0,
          "padding": 0,
        }
      }
    />
    <div
      className="spacer vertical"
      style={
        Object {
          "height": "100%",
          "maxHeight": "auto",
          "width": 15,
        }
      }
    />
    <header
      className="headings color-inverted size-lg weight-bold"
    >
      Home
    </header>
  </div>
</div>
`;
